Colors in progress

--- a/CSS/colors.css
+++ b/CSS/colors.css
@@ -1,1 +1,28 @@
-.color
+.white_text {
+    color:#F4F4F4 ;
+}
+
+.black_text {
+    color: #13130D;
+}
+
+.white_background {
+    background-color: #F4F4F4;
+}
+
+.black_background {
+    background-color: #13130D;
+}
+
+.button_background {
+    background-color: #E08F5B;
+}
+
+.button_text {
+    color: #E08F5B;
+}
+
+.card_box {
+       background-color: #202020;
+}
+
