--- a/CSS/textstyles.css
+++ b/CSS/textstyles.css
@@ -10,21 +10,21 @@ p {
 
 h1 {
     font-family: 'Playfair Display', serif;
-    font-size: 3.052em;
+    font-size: 3.052rem;
     font-weight: 400;
     line-height: 73.32px;
 }
 
 h2 {
     font-family: 'Playfair Display', serif;
-    font-size: 2.441em;
+    font-size: 2.441rem;
     font-weight: 400;
     line-height: 58.65px;
 }
 
 h3 {
     font-family: 'Playfair Display', serif;
-    font-size: 1.953em;
+    font-size: 1.953rem;
     font-weight: 400;
     line-height: 58.65px;
 }
