--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -36,4 +36,9 @@ footer {
         grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
         grid-template-rows: 2;
     }
+
+    .footer__item{
+        position: absolute;
+        
+    }
 }
