--- a/CSS/body_LP.css
+++ b/CSS/body_LP.css
@@ -1,46 +1,65 @@
 body {
-    display: grid;
-    grid-template-rows: repeat(4, 1fr);
+    display: flex;
+    flex-direction: column;
     background-color: #13130D;
+    background-image: url(../Assets/kisspng-viking-art-clip-art-vikings-5b478a98e55999.svg);
+    align-items: center;
+    gap: 300px;
 }
 
+header {
+    background-color: var(--Bl-bg);
+    width: 100%;
+    height: 100px;
+}
+
+main{
+    gap: 200px;
+}
 .con {
-    background-color:#F4F4F4;
+    background-color: var(--Wh-bg);
     width: 100%;
     height: 600px;
     align-items: center;
 }
 
-.one {
+.sli {
     text-align: center;
     height: 450px;
 }
 
-.two {
+.app {
+    text-align: center;
     height: 400px;
     margin: auto;
     max-width: 900px;
 }
 
-.three {
-    height: 500px;
+.ren {
+    height: auto;
     width: 100%;
+    margin: auto;
+    max-width: 1800px;
     position: relative;
 }
 
 .Video{
+    height: auto;
     width: 100%;
+    max-width: 1800px;
     margin: 0 auto;
 }
 
 .Video video{
     width: 100%;
+    height: 100%;
+    z-index: 0;
 }
 
 .Vidcta {
     position: absolute;
-    z-index: 5;
-    top: 70%;
+    z-index: 1;
+    top: 55%;
     left: 10%;
     color: #F4F4F4 ;
 }
@@ -52,4 +71,10 @@ body {
     background-color:rgba(165, 42, 42, 0);
     border-color: rgb(224, 143, 91);
     border-width: 1px;
+}
+
+footer {
+    background-color: sienna;
+    width: 100%;
+    height: 100px;
 }
