--- a/CSS/textstyles.css
+++ b/CSS/textstyles.css
@@ -38,6 +38,7 @@ h2 {
     font-size: 1.602rem;
     font-weight: 400;
     line-height: 34,16px;
+    text-align: center;
 }
 
 @media screen and (min-width: 500px) {
