--- a/CSS/Card_img_text.css
+++ b/CSS/Card_img_text.css
@@ -2,14 +2,35 @@
 
 .card__wrapper {
     display: flex;
-    margin: 0 auto;
-    padding-top: 52px;
+    flex-flow: row wrap;
+    padding-top: 45px;  
+    max-width: 322px;
+    margin: 0 auto;  
+    
+ 
+}
+
+@media screen and (min-width: 500px) {
+    .card__wrapper {
+        display: flex;
+        flex-flow: row wrap;
+        padding-top: 52px;
+        max-width: 1080px;
+        margin: 0 auto;
+    }
 }
 
 .card__img {
-    width: 535px;
-    height: 400px;
-    background-color: burlywood;
+    height: 242px;
+}
+
+@media screen and (min-width: 500px) {
+    .card__img {
+        margin-top: 25px;
+        width: 535px;
+        height: 402px;
+        z-index: -1;
+    }
 }
 
 .card_img_img{
@@ -20,7 +41,71 @@
 
 .card__text {
     text-align: left;
-    width: 545px;
-    height: 420px;
-    padding-left: -50px;
+    width:322px;
+    height:341px;
+    padding-left: 35px;
+    padding-right: 35px;
+    padding-top: 40px;
+
+    box-shadow: -2px 3px 5px 4px rgba(0, 0, 0, 0.25);
+}
+
+@media screen and (min-width: 500px) {
+    .card__text {
+        margin-left: -10px;
+        text-align: left;
+        width: 545px;
+        height: 417px;
+        padding-left: 80px;
+        padding-right: 46px;
+        padding-top: 45px;
+    
+        box-shadow: -2px 3px 5px 4px rgba(0, 0, 0, 0.25);
+    }
+}
+
+.card__text p {
+    padding-top: 10px;
+}
+
+@media screen and (min-width: 500px) {
+    .card__text p {
+        padding-top: 35px;
+    }
+}
+
+.card__text--reverse {
+    text-align: left;
+    width:322px;
+    height:341px;
+    padding-left: 35px;
+    padding-right: 35px;
+    padding-top: 40px;
+
+    box-shadow: -2px 3px 5px 4px rgba(0, 0, 0, 0.25);
+
+}
+
+@media screen and (min-width: 500px) {
+    .card__text--reverse {
+        margin-right: -10px;
+        text-align: left;
+        width: 545px;
+        height: 417px;
+        padding-left: 80px;
+        padding-right: 46px;
+        padding-top: 45px;
+    
+        box-shadow: -2px 3px 5px 4px rgba(0, 0, 0, 0.25);
+    }
+}
+
+.card__text--reverse p {
+    padding-top: 10px;
+}
+
+@media screen and (min-width: 500px) {
+    .card__text--reverse p {
+        padding-top: 35px;
+    }
 }
