--- a/CSS/body_LP.css
+++ b/CSS/body_LP.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color: var(--Bl-bg);
+    background-color: var(--Wh-bg);
     width: 100%;
     height: 100px;
 }
@@ -16,11 +16,18 @@ header {
 main{
     gap: 200px;
 }
+
 .con {
     background-color: var(--Wh-bg);
     width: 100%;
     height: 600px;
     align-items: center;
+}
+
+.Hero{
+    width: 100%;
+    height: 500px;
+    background-color: var(--Wh-bg);
 }
 
 .sli {
@@ -70,7 +77,7 @@ main{
     color: #F4F4F4;
     background-color:rgba(165, 42, 42, 0);
     border-color: rgb(224, 143, 91);
-    border-width: 1px;
+    border-width: 2px;
 }
 
 footer {
