--- a/CSS/body_LP.css
+++ b/CSS/body_LP.css
@@ -81,7 +81,8 @@ main{
 }
 
 footer {
-    background-color: sienna;
+    background-color: #13130D;
     width: 100%;
     height: 100px;
+    border-top: 0.5px solid #F4F4F4;
 }
