--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -20,6 +20,8 @@ footer {
     padding-left: 26px;
   }
 
+  /*-----------------------------------------*/
+
   
   
   @media screen and (min-width: 768px) {
@@ -33,6 +35,7 @@ footer {
     display: flex;
     flex-flow: row wrap;
     flex-basis: 1180px;
+    margin-top: 39px;
   }
   
   .i__img {
@@ -113,6 +116,7 @@ footer {
     padding-bottom: 44px;
 }
 
+
 @media screen and (min-width: 768px) {
     .schedule-order {
         order: 1;
@@ -137,20 +141,25 @@ footer {
     .privacy-order{
         order: 5;
         padding-bottom: 0px;
+        margin-top: 16px;
     }
 
     .copyright-order{
         order: 6;
         padding-bottom: 0px;
+        margin-top: 16px;
     }
 
     .faq-order {
         order: 7;
         padding-bottom: 0px;
+        margin-top: 16px;
     }
 
     .social-order {
         order: 8;
         padding-bottom: 0px;
+        margin-top: 16px;
     }
+
 }
