--- a/CSS/body_LP.css
+++ b/CSS/body_LP.css
@@ -26,7 +26,6 @@ main{
 
 .Hero{
     width: 100%;
-    height: 500px;
     background-color: var(--Wh-bg);
 }
 
@@ -81,7 +80,7 @@ main{
 }
 
 footer {
-    background-color: sienna;
+    background-color: var(--Bl-bg);
     width: 100%;
     height: 100px;
 }
