--- a/CSS/body_LP.css
+++ b/CSS/body_LP.css
@@ -1,24 +1,20 @@
 body {
-    display: flex;
-    flex-direction: column;
     background-color: #13130D;
     background-image: url(../Assets/kisspng-viking-art-clip-art-vikings-5b478a98e55999.svg);
-    align-items: center;
-    gap: 300px;
 }
 
 header {
-    background-color: var(--Wh-bg);
+    background: linear-gradient(180deg, rgba(19,19,13,0.6) 30%, rgba(19,19,13,0.2) 100%);
     width: 100%;
     height: 100px;
+    backdrop-filter: blur(4px);
+    z-index: 100;
+    display: block;
+    position: relative;
 }
 
-main{
-    gap: 200px;
-}
 
 .con {
-    background-color: var(--Wh-bg);
     width: 100%;
     height: 600px;
     align-items: center;
@@ -26,12 +22,14 @@ main{
 
 .Hero{
     width: 100%;
-    background-color: var(--Wh-bg);
+    z-index: 0;
+    transform: translateY(-70px);
 }
 
 .sli {
     text-align: center;
     height: 450px;
+    margin: 1rem 0 5rem 0;
 }
 
 .app {
@@ -39,6 +37,9 @@ main{
     height: 400px;
     margin: auto;
     max-width: 900px;
+    margin: 4rem 0 2rem 0;
+
+    background-color: var(--Wh-bg);
 }
 
 .ren {
@@ -47,6 +48,7 @@ main{
     margin: auto;
     max-width: 1800px;
     position: relative;
+    margin: 4rem 0 2rem 0;
 }
 
 .Video{
@@ -73,9 +75,9 @@ main{
 .TmTe {
     margin: 10px;
     padding: 2px 10px;
-    color: #F4F4F4;
-    background-color:rgba(165, 42, 42, 0);
-    border-color: rgb(224, 143, 91);
+    color: var(--Wh-tx);
+    background-color:var(--Bl-bg);
+    border-color: var(--Or-tx);
     border-width: 2px;
 }
 
