--- a/CSS/Card_img_text.css
+++ b/CSS/Card_img_text.css
@@ -47,7 +47,7 @@
     padding-left: 35px;
     padding-right: 35px;
     padding-top: 40px;
-
+    background-color:var(--Car-bx) ;
     box-shadow: -2px 3px 5px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -82,8 +82,8 @@
     padding-left: 35px;
     padding-right: 35px;
     padding-top: 40px;
-
     box-shadow: -2px 3px 5px 4px rgba(0, 0, 0, 0.25);
+    order: 5
 
 }
 
@@ -96,8 +96,8 @@
         padding-left: 80px;
         padding-right: 46px;
         padding-top: 45px;
-    
         box-shadow: -2px 3px 5px 4px rgba(0, 0, 0, 0.25);
+        order: 0;
     }
 }
 
