--- a/CSS/cover.css
+++ b/CSS/cover.css
@@ -34,13 +34,28 @@
 .hero_box_secondary {
     position: absolute;
     height: 279px;
-    width: 476px;
-    left: 205px;
-    bottom: 70px;
-    top: 170px;
+    width: 90%;
+    left: 5%;
+    bottom: 60px;
+    margin: auto;
     border-radius: 0px;
     padding-left: 35px;
     padding-right: 24px;
     padding-top: 50px;
     z-index: 3;
+}
+
+@media screen and (min-width: 500px) {
+    .hero_box_secondary {
+        position: absolute;
+        height: 279px;
+        width: 476px;
+        left: 205px;
+        top: -200px;
+        border-radius: 0px;
+        padding-left: 35px;
+        padding-right: 24px;
+        padding-top: 50px;
+        z-index: 3;
+    }
 }
