--- a/CSS/body_LP.css
+++ b/CSS/body_LP.css
@@ -27,7 +27,7 @@ header {
 
 .sli {
     text-align: center;
-    height: 450px;
+    height: auto;
     margin: 3rem 0 10rem 0;
 }
 
@@ -80,5 +80,5 @@ header {
 footer {
     background-color: var(--Bl-bg);
     width: 100%;
-    height: 100px;
+    height: auto;
 }
