--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,6 +1,11 @@
 body {
     font-size: 16px;
+}
 
+@media screen and (min-width: 500px) {
+  .body {
+    font-size: 18px
+  }
 }
 
 .support__menu {
