--- a/CSS/body_LP.css
+++ b/CSS/body_LP.css
@@ -1,88 +1,87 @@
 body {
-    display: flex;
-    flex-direction: column;
-    background-color: #13130D;
-    background-image: url(../Assets/kisspng-viking-art-clip-art-vikings-5b478a98e55999.svg);
-    align-items: center;
-    gap: 300px;
+  display: flex;
+  flex-direction: column;
+  background-color: #13130d;
+  background-image: url(../Assets/kisspng-viking-art-clip-art-vikings-5b478a98e55999.svg);
+  align-items: center;
+  gap: 300px;
 }
 
 header {
-    background-color: var(--Wh-bg);
-    width: 100%;
-    height: 100px;
+  background-color: var(--Wh-bg);
+  width: 100%;
 }
 
-main{
-    gap: 200px;
+main {
+  gap: 200px;
 }
 
 .con {
-    background-color: var(--Wh-bg);
-    width: 100%;
-    height: 600px;
-    align-items: center;
+  background-color: var(--Wh-bg);
+  width: 100%;
+  height: 600px;
+  align-items: center;
 }
 
-.Hero{
-    width: 100%;
-    height: 500px;
-    background-color: var(--Wh-bg);
+.Hero {
+  width: 100%;
+  height: 500px;
+  background-color: var(--Wh-bg);
 }
 
 .sli {
-    text-align: center;
-    height: 450px;
+  text-align: center;
+  height: 450px;
 }
 
 .app {
-    text-align: center;
-    height: 400px;
-    margin: auto;
-    max-width: 900px;
+  text-align: center;
+  height: 400px;
+  margin: auto;
+  max-width: 900px;
 }
 
 .ren {
-    height: auto;
-    width: 100%;
-    margin: auto;
-    max-width: 1800px;
-    position: relative;
+  height: auto;
+  width: 100%;
+  margin: auto;
+  max-width: 1800px;
+  position: relative;
 }
 
-.Video{
-    height: auto;
-    width: 100%;
-    max-width: 1800px;
-    margin: 0 auto;
+.Video {
+  height: auto;
+  width: 100%;
+  max-width: 1800px;
+  margin: 0 auto;
 }
 
-.Video video{
-    width: 100%;
-    height: 100%;
-    z-index: 0;
+.Video video {
+  width: 100%;
+  height: 100%;
+  z-index: 0;
 }
 
 .Vidcta {
-    position: absolute;
-    z-index: 1;
-    top: 55%;
-    left: 10%;
-    color: #F4F4F4 ;
+  position: absolute;
+  z-index: 0;
+  top: 55%;
+  left: 10%;
+  color: #f4f4f4;
 }
 
 .TmTe {
-    margin: 10px;
-    padding: 2px 10px;
-    color: #F4F4F4;
-    background-color:rgba(165, 42, 42, 0);
-    border-color: rgb(224, 143, 91);
-    border-width: 2px;
+  margin: 10px;
+  padding: 2px 10px;
+  color: #f4f4f4;
+  background-color: rgba(165, 42, 42, 0);
+  border-color: rgb(224, 143, 91);
+  border-width: 2px;
 }
 
 footer {
-    background-color: #13130D;
-    width: 100%;
-    height: 100px;
-    border-top: 0.5px solid #F4F4F4;
+  background-color: #13130d;
+  width: 100%;
+  height: 100px;
+  border-top: 0.5px solid #f4f4f4;
 }
