--- a/CSS/Card_img_text.css
+++ b/CSS/Card_img_text.css
@@ -34,6 +34,23 @@
     }
 }
 
+.card__img__bg {
+    height: 242px;
+    background-color: var(--Car-bx);
+    display: flex;
+}
+
+@media screen and (min-width: 500px) {
+    .card__img__bg {
+        margin-top: 25px;
+        width: 535px;
+        height: 402px;
+        z-index: -1;
+        background-color: var(--Car-bx);
+        display: flex;
+    }
+}
+
 .card_img_img{
     height: 100%;
     width: 100%;
@@ -109,4 +126,20 @@
     .card__text--reverse p {
         padding-top: 35px;
     }
+}
+
+.card_img_img__qr-code {
+    width: 300px;
+    height: 300px;
+    margin: auto;
+
+}
+
+.card-time-TX {
+    display: flex;
+}
+
+.Tx_start_right{
+    text-align: right;
+    margin: 0 20%;
 }
