--- a/CSS/Card_img_text.css
+++ b/CSS/Card_img_text.css
@@ -100,7 +100,8 @@
     padding-right: 35px;
     padding-top: 40px;
     box-shadow: -2px 3px 5px 4px rgba(0, 0, 0, 0.25);
-    order: 5
+    order: 5;
+    background-color: var(--Car-bx);
 
 }
 
