--- a/CSS/body_LP.css
+++ b/CSS/body_LP.css
@@ -60,6 +60,11 @@ header {
     background-color: var(--Wh-bg);
 }
 
+.app img {
+    width: 100%;
+    object-fit:cover;
+}
+
 .ren {
     height: auto;
     width: 100%;
