--- a/CSS/body_LP.css
+++ b/CSS/body_LP.css
@@ -6,7 +6,7 @@ body {
 header {
     background: linear-gradient(180deg, rgba(19,19,13,0.6) 30%, rgba(19,19,13,0.2) 100%);
     width: 100%;
-    height: 100px;
+    height: 100%;
     backdrop-filter: blur(4px);
     z-index: 0;
     display: block;
@@ -23,6 +23,12 @@ header {
     width: 100%;
     z-index: 0;
     transform: translateY(-70px);
+}
+
+.Hero_Tickets{
+        width: 100%;
+        z-index: 0;
+        transform: translateY(200px);
 }
 
 .Hero-but{
@@ -65,6 +71,7 @@ header {
     width: 100%;
     position: relative;
     margin: 4rem 0;
+}
 
 .Video {
   height: auto;
