--- a/CSS/body_LP.css
+++ b/CSS/body_LP.css
@@ -1,12 +1,19 @@
 body {
     background-color: #13130D;
     background-image: url(../Assets/kisspng-viking-art-clip-art-vikings-5b478a98e55999.svg);
+    width: 100;
+}
+@media screen and (min-width: 500px){
+    body {
+        width: 100vw;
+    }
+
 }
 
 header {
     background: linear-gradient(180deg, rgba(19,19,13,0.6) 30%, rgba(19,19,13,0.2) 100%);
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: auto;
     backdrop-filter: blur(4px);
     z-index: 0;
     display: block;
@@ -22,7 +29,15 @@ header {
 .Hero{
     width: 100%;
     z-index: 0;
-    transform: translateY(-70px);
+    height: 100vh;
+}
+
+@media screen and (min-width: 500px){
+    .Hero{
+        width: 100%;
+        z-index: 0;
+        transform: translateY(-70px);
+    }
 }
 
 .Hero_Tickets{
@@ -59,16 +74,29 @@ header {
 
 .app {
     text-align: center;
-    height: 400px;
-    width: auto;
+    width: 100%;
     max-width: 900px;
     margin: 4rem auto;
     background-color: var(--Wh-bg);
 }
 
+@media screen and (min-width: 500px)
+{
+    .app {
+        text-align: center;
+        height: 400px;
+        width: auto;
+        max-width: 900px;
+        margin: 4rem auto;
+        background-color: var(--Wh-bg);
+    }
+
+}
+
 .app img {
     width: 100%;
     object-fit:cover;
+    height: 100%;
 }
 
 .ren {
@@ -81,13 +109,14 @@ header {
 .Video {
   height: auto;
   width: 100%;
-  max-width: 1800px;
+  max-width: 1440px;
   margin: 0 auto;
 }
 
 .Video video {
   width: 100%;
   height: 100%;
+  margin: 0 auto;
   z-index: 0;
 }
 
