--- a/CSS/video.css
+++ b/CSS/video.css
@@ -18,18 +18,26 @@
     text-align: left;
     width: 90%;
     height: auto;
-    padding: 50px;
-    margin: 3rem auto;
+    padding-top: 30px;
+    padding-bottom: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 30px;
     box-shadow: -2px 3px 5px 4px rgba(0, 0, 0, 0.25);
     display: block;
     transform: translateY(-80px);
     background-color: var(--Car-bx);
+    max-width: 75ch;
  }
 
  @media screen and (min-width: 500px) {
     .vid-textbox-wrapper {
        margin: 3rem auto;
-       max-width: 1440px;
-       padding: 80px;
+       max-width: 1000px;
+       padding-top: 20px;
+       padding-bottom: 40px;
+       padding-left: 150px;
+       padding-right: 150px;
+       
     }
  }
