--- a/CSS/Tickets.css
+++ b/CSS/Tickets.css
@@ -5,10 +5,11 @@ form {
 .single-tickets {
     background-color: var(--Car-bx);
     color: var(--W-tx);
-    height: 600px;
+    height: 500px;
     width: 320px;
     margin: 10px;
     z-index: 2;
+    padding: 20px
 }
 
 @media screen and (min-width: 500px) {
@@ -19,15 +20,35 @@ form {
         height: 600px;
         width: 550px;
         z-index: 2;
-        padding-top: 20px;
-        padding-left: 0;
+        padding: 30px
     }
 }
+
+.tickets-wrapper {
+    display: flex; 
+    flex-direction: column; 
+}
+
+.g-tickets-wrapper {
+    gap: 30px;
+}
+
+.tickets-flex {
+    display: flex; 
+    justify-content: space-between
+}
+
+.tickets-align {
+    display: flex; 
+    align-items: center
+}
+
 
  .center-text {
         position: relative;
         text-align: center; 
-        margin-top: 50px;      
+        margin-top: 50px;
+        margin-bottom: 50px;      
 }
 
 
@@ -37,7 +58,7 @@ form {
     align-items: center;
     justify-content: center;
     flex-wrap:wrap;
-    margin-top: 200px;  
+    margin-top: 250px;  
 }
 
 @media screen and (min-width:500px) {
@@ -50,14 +71,6 @@ input,label {
     position: relative;
 }
 
-
-.wrapper {
-    list-style-type: none;
-    padding: 0;
-    border-radius: 1px;
-  }
-
- 
 
   .form-row {
     padding: .3em;
@@ -98,8 +111,10 @@ input,label {
     color: var(--W-tx);
     border-color: #E08F5B;
     border-style: solid;
-    height: 490px;
+    height: 500px;
     width: 320px;
+    margin: 10px;
+    padding: 20px
   }
 
 
@@ -107,14 +122,15 @@ input,label {
       .group-tickets {
         height: 600px;
         width: 550px;
-        padding-top: 20px;padding-left: 30px;
-        padding-right: 30px;
+        padding-top: 20px;
+        padding: 30px
       }
   }
 
   .btn-tickets {
       display: flex;
       justify-content: center;
+      margin-top: 40px;
       width: 100%;
       
   }
@@ -127,24 +143,20 @@ input,label {
     }
 }
 
-.btn-tickets_group {
-    display: flex;
-    justify-content: center;
-    margin-left: 20px;
-    width: 100%;
-}
-
-@media  screen and (min-width:500px) {
-    .btn-tickets_group {
-        display: flex;
-        justify-content: end;
-    }
-}
-
-
   .pgh-text {
       margin:0;
   }
+
+  .box-height {
+    height: 250px;
+}
+
+.border-box {
+    border: solid;
+    border-color: #E08F5B;
+    padding: 20px;
+
+}
 
  
 
