--- a/CSS/nav-bar.css
+++ b/CSS/nav-bar.css
@@ -229,11 +229,11 @@ li.dropdown-title {
 
 .mini-space {
   height: 8px;
+}
 
 .top-space {
   width: 100%;
   height: 250px;
-
 }
 
 @media (max-width: 768px) {
@@ -271,9 +271,6 @@ li.dropdown-title {
     display: block;
   }
 
-
-  
-
   p {
     margin: 30px 20px;
   }
@@ -283,4 +280,3 @@ li.dropdown-title {
     height: 48px;
   }
 }
-
