centered text on tickets.html

--- a/CSS/Tickets.css
+++ b/CSS/Tickets.css
@@ -1,162 +1,164 @@
+/*---------For-tickets-aka-ticket.html---------*/
+.center_text {
+  width: 290px;
+  margin: 0 auto;
+}
+
+.text-book-guide {
+  margin-bottom: 32px;
+}
+/*----endhere-----*/
+
 form {
-    display: table;
+  display: table;
 }
 
 .single-tickets {
-    background-color: var(--Car-bx);
-    color: var(--W-tx);
-    height: 500px;
-    width: 320px;
-    margin: 10px;
-    z-index: 2;
-    padding: 20px
+  background-color: var(--Car-bx);
+  color: var(--W-tx);
+  height: 500px;
+  width: 320px;
+  margin: 10px;
+  z-index: 2;
+  padding: 20px;
 }
 
 @media screen and (min-width: 500px) {
-    .single-tickets {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        height: 600px;
-        width: 550px;
-        z-index: 2;
-        padding: 30px
-    }
-}
-
-.tickets-wrapper {
-    display: flex; 
-    flex-direction: column; 
-}
-
-.g-tickets-wrapper {
-    gap: 30px;
-}
-
-.tickets-flex {
-    display: flex; 
-    justify-content: space-between
-}
-
-.tickets-align {
-    display: flex; 
-    align-items: center
-}
-
-
- .center-text {
-        position: relative;
-        text-align: center; 
-        margin-top: 50px;
-        margin-bottom: 50px;      
-}
-
-
-.flex-box {
-    display: flex;
-    gap: 30px;
-    align-items: center;
-    justify-content: center;
-    flex-wrap:wrap;
-    margin-top: 250px;  
-}
-
-@media screen and (min-width:500px) {
-    .flex-box {
-        margin-top: 50px;
-    }  
-}
-
-input,label {
-    position: relative;
-}
-
-
-  .form-row {
-    padding: .3em;
-    display: flex;
-    justify-content: center;
-  }
-
-  @media screen and (min-width:500px) {
-    .form-row {
-        padding:.5em;
-        display: flex;
-        justify-content: center;
-    }
-}
-
-  .form-row > label {
-    padding: 5px 5px 5px 0;
-  }
-
-  @media screen and (min-width:500px){
-    .form-row > label {
-        padding: 3px 3px 3px 0;
-      }
-  }
-
-  @media screen and (min-width:500px) {
-      .form-row >label {
-          padding: 0;
-      }
-  }
-
-
-  .group-tickets{
+  .single-tickets {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    background-color: var(--Bl-bg);
-    color: var(--W-tx);
-    border-color: #E08F5B;
-    border-style: solid;
-    height: 500px;
-    width: 320px;
-    margin: 10px;
-    padding: 20px
+    height: 600px;
+    width: 550px;
+    z-index: 2;
+    padding: 30px;
   }
-
-
-  @media  screen and (min-width:500px) {
-      .group-tickets {
-        height: 600px;
-        width: 550px;
-        padding-top: 20px;
-        padding: 30px
-      }
-  }
-
-  .btn-tickets {
-      display: flex;
-      justify-content: center;
-      margin-top: 40px;
-      width: 100%;
-      
-  }
-
-@media  screen and (min-width:500px) {
-    .btn-tickets {
-        display: flex;
-        justify-content: end;
-        width: 100%;
-    }
 }
 
-  .pgh-text {
-      margin:0;
-  }
+.tickets-wrapper {
+  display: flex;
+  flex-direction: column;
+}
 
-  .box-height {
-    height: 250px;
+.g-tickets-wrapper {
+  gap: 30px;
+}
+
+.tickets-flex {
+  display: flex;
+  justify-content: space-between;
+}
+
+.tickets-align {
+  display: flex;
+  align-items: center;
+}
+
+.center-text {
+  position: relative;
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.flex-box {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 250px;
+}
+
+@media screen and (min-width: 500px) {
+  .flex-box {
+    margin-top: 50px;
+  }
+}
+
+input,
+label {
+  position: relative;
+}
+
+.form-row {
+  padding: 0.3em;
+  display: flex;
+  justify-content: center;
+}
+
+@media screen and (min-width: 500px) {
+  .form-row {
+    padding: 0.5em;
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.form-row > label {
+  padding: 5px 5px 5px 0;
+}
+
+@media screen and (min-width: 500px) {
+  .form-row > label {
+    padding: 3px 3px 3px 0;
+  }
+}
+
+@media screen and (min-width: 500px) {
+  .form-row > label {
+    padding: 0;
+  }
+}
+
+.group-tickets {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: var(--Bl-bg);
+  color: var(--W-tx);
+  border-color: #e08f5b;
+  border-style: solid;
+  height: 500px;
+  width: 320px;
+  margin: 10px;
+  padding: 20px;
+}
+
+@media screen and (min-width: 500px) {
+  .group-tickets {
+    height: 600px;
+    width: 550px;
+    padding-top: 20px;
+    padding: 30px;
+  }
+}
+
+.btn-tickets {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+  width: 100%;
+}
+
+@media screen and (min-width: 500px) {
+  .btn-tickets {
+    display: flex;
+    justify-content: end;
+    width: 100%;
+  }
+}
+
+.pgh-text {
+  margin: 0;
+}
+
+.box-height {
+  height: 250px;
 }
 
 .border-box {
-    border: solid;
-    border-color: #E08F5B;
-    padding: 20px;
-
+  border: solid;
+  border-color: #e08f5b;
+  padding: 20px;
 }
-
- 
-
